[workspace]
resolver = "2"
members = [
    "sdk",
    "cli",
    "token",
    "staking",
    "card_staking",
    "swap_amm",
    "payment",
    "invite",
    "escrow",
    "p2p",
]

[workspace.dependencies]
soroban-sdk = "21.7.4"
soroban-token-sdk = "21.7.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
