[package]
name = "olighft-cli"
version = "1.0.0"
edition = "2021"
publish = false
description = "Developer CLI for compiling, testing, inspecting, versioning, and deploying OLIGHFT contracts"

[[bin]]
name = "olighft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
semver = "1"
which = "6"
